reestruturando estrutura e definindo relacionamentos para persistencia JPA