@@ -1,20 +1,17 @@
 package com.ltadcrm.ltadcrm.usecases;
 
-import java.util.ArrayList;
-
 import java.util.List;
-import java.util.stream.Collectors;
 
 import org.springframework.stereotype.Service;
 
 import com.ltadcrm.ltadcrm.domain.Items;
-import com.ltadcrm.ltadcrm.domain.DTO.domainDTO.ItemDetailDTO;
+import com.ltadcrm.ltadcrm.domain.DTO.domainDTO.ItemsDTO;
 import com.ltadcrm.ltadcrm.domain.DTO.domainDTO.CostCenterByNameDTO;
 import com.ltadcrm.ltadcrm.repositories.ItemsRepository;
-import com.ltadcrm.ltadcrm.responses.ListWithTotalValues;
-import com.ltadcrm.ltadcrm.usecases.strategy.ItemDetailsDTOConvertImpl;
 
-import jakarta.persistence.Tuple;
+import com.ltadcrm.ltadcrm.responses.ListWithTotalValues;
+import com.ltadcrm.ltadcrm.usecases.mapper.ItemsMapper;
+
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 
@@ -22,30 +19,20 @@ import lombok.extern.slf4j.Slf4j;
 @Service
 @RequiredArgsConstructor
 public class ReadMethod {
-
+    private final ItemsMapper itemsMapper;
     private final ItemsRepository itemsRepository;
-    private final ItemDetailsDTOConvertImpl convert;
 
-    public List<ItemDetailDTO> list() throws Exception {
-        try {
-
-            List<ItemDetailDTO> dtos = new ArrayList<>();
-            for (Tuple tuple : itemsRepository.findAllItemsDTOs()) {
-                ItemDetailDTO dto = convert.convert(tuple);
-                dtos.add(dto);
-            }
-            return dtos;
-        } catch (Exception e) {
-            throw new Exception("Current error in ItemService " + e);
-        }
+    public List<ItemsDTO> list() {
+        List<Items> items = itemsRepository.findAll();
+        return itemsMapper.toDTOList(items);
     }
 
     public ListWithTotalValues<CostCenterByNameDTO> readItemsByCostCenter(String name) throws Exception {
         try {
             List<Items> items = itemsRepository.findByCostCenterName(name);
             List<CostCenterByNameDTO> costCenterByNameDTOs = items.stream()
-                    .map(CostCenterByNameDTO::fromItem)
-                    .collect(Collectors.toList());
+                    .map(CostCenterByNameDTO::fromItem).toList();
+
             Double totalValue = costCenterByNameDTOs.stream()
                     .mapToDouble(CostCenterByNameDTO::getValue)
                     .sum();
